--- a/aviv.html
+++ b/aviv.html
@@ -510,6 +510,28 @@
 
       </div>
     </section>
+    <br>
+    <section>
+      <div class="container">
+        <a href="graphics/aviv.html">
+          <h5>AVIV Ratio</h5>
+        </a>
+        <p> 
+	  The asset value-investor value ratio is the relationship between active capitalization (ActiveCap), which is the BTC that is in motion at a given time, and investors' realized capitalization (InverstorCap).
+          <br><br>
+	  The investors realized price (InvertorCap) reflects the realized capital (RealizedCap), which is the price at which the BTC have been purchased but discounting what was delivered to the miners.
+          <br><br>
+	  The AVIV ratio, then, is a way to measure what proportion of the money in Bitcoin is actually in motion (active capitalization) compared to how much money investors have invested in total (realized capitalization).
+	  <br>
+	  When this ratio is above 250%, it suggests that Bitcoin is overvalued and a recession is likely to begin, as there is a large amount of money in motion relative to the investment made.
+	  <br>
+	  On the other hand, when the ratio is below 55%, it indicates oversold and an upward trend, since there is relatively little money in movement compared to the investment made, which suggests that there may be interesting investment opportunities.
+          <br><br>
+	  More information in the white paper of <a href="https://ark-invest.com/white-papers/cointime-economics/?utm_campaign=Cointime%20Economics&utm_content=261766789">Cointime Economics</a> on @ARKInvest by @dpuellARK and @Checkmatey
+        </p>
+      </div>
+
+    </section>
 
   </main><!-- End #main -->
 
