--- a/aviv_dark.html
+++ b/aviv_dark.html
@@ -519,7 +519,7 @@
         <p> 
 	  The asset value-investor value ratio is the relationship between active capitalization (ActiveCap), which is the BTC that is in motion at a given time, and investors' realized capitalization (InverstorCap).
           <br><br>
-	  The investors realized price (InvertorCap) reflects the realized capital (RealizedCap), which is the price at which the BTC have been purchased but discounting what was delivered to the miners.
+	  The investors realized price capitalization (InvertorCap) is the realized capital (RealizedCap), which is the price at which the BTC have been purchased but discounting what was delivered to the miners.
           <br><br>
 	  The AVIV ratio, then, is a way to measure what proportion of the money in Bitcoin is actually in motion (active capitalization) compared to how much money investors have invested in total (realized capitalization).
 	  <br>
