--- a/aviv.html
+++ b/aviv.html
@@ -521,8 +521,8 @@
           <br><br>
 	  The investors realized price capitalization (InvertorCap) is the realized capital (RealizedCap), which is the price at which the BTC have been purchased but discounting what was delivered to the miners.
           <br><br>
-	  The AVIV ratio, then, is a way to measure what proportion of the money in Bitcoin is actually in motion (active capitalization) compared to how much money investors have invested in total (realized capitalization).
-	  <br>
+	  The AVIV ratio, then, is a way to measure what proportion of the money in Bitcoin is actually in motion, active capitalization, compared to how much money investors have invested in total, Investor realized capitalization.
+          <br><br>
 	  When this ratio is above 250%, it suggests that Bitcoin is overvalued and a recession is likely to begin, as there is a large amount of money in motion relative to the investment made.
 	  <br>
 	  On the other hand, when the ratio is below 55%, it indicates oversold and an upward trend, since there is relatively little money in movement compared to the investment made, which suggests that there may be interesting investment opportunities.
