--- a/m2_dark.html
+++ b/m2_dark.html
@@ -394,7 +394,7 @@
         <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
           <i class="bi bi-bar-chart"></i><span>Others charts</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
-        <ul id="charts-nav" class="nav-content" data-bs-parent="#sidebar-nav">
+        <ul id="charts-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
           <li>
             <a href="stablecoin_supply_dark.html">
               <i class="bi bi-circle"></i><span>Stablecoin supply</span>
@@ -457,7 +457,7 @@
         <a class="nav-link collapsed" data-bs-target="#macro-nav" data-bs-toggle="collapse" href="#">
           <i class="bi bi-bar-chart"></i><span>Macro</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
-        <ul id="macro-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
+        <ul id="macro-nav" class="nav-content" data-bs-parent="#sidebar-nav">
           <li>
             <a href="sp500_gold_dark.html">
               <i class="bi bi-circle"></i><span>BTC, S&P500, Gold, Tesla</span>
