--- a/graphics/m2_dark.html
+++ b/graphics/m2_dark.html
@@ -127,7 +127,7 @@
                 },
                 yAxis: 1
             },{
-                name: 'M2',
+                name: 'M2 Growth',
                 type: 'column',
                 data: data,
                 tooltip: {
