--- a/reports/bitcoin_distribution_coin.html
+++ b/reports/bitcoin_distribution_coin.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><title>Bitcoin coin distribution</title><meta charset='utf-8'><meta name='viewport' content='width=device-width, initial-scale=1'><link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css'></head><body><div class='container'><h2>Bitcoin coin distribution</h2><p><b> Saturday  23 Mar 2024
+<!DOCTYPE html><html><head><title>Bitcoin coin distribution</title><meta charset='utf-8'><meta name='viewport' content='width=device-width, initial-scale=1'><link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css'></head><body><div class='container'><h2>Bitcoin coin distribution</h2><p><b> Sunday    24 Mar 2024
 
 </b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Daily update</p>
 <table class='table table-striped'>
@@ -14,86 +14,86 @@
   <tr valign="top">
     <td align="left">Humpback</td>
     <td align="left">&gt;10K BTC</td>
+    <td align="right">2992030</td>
     <td align="right">3009115</td>
-    <td align="right">3018975</td>
-    <td align="right" class="danger" >-9860</td>
-    <td align="right">16882</td>
-    <td align="right" class="danger" >-4299</td>
-    <td align="right">48275</td>
-    <td align="right" class="danger" >-23198</td>
-    <td align="right" class="danger" >-0.765</td>
+    <td align="right" class="danger" >-17085</td>
+    <td align="right" class="danger" >-13249</td>
+    <td align="right" class="danger" >-20658</td>
+    <td align="right">17499</td>
+    <td align="right">&nbsp; </td>
+    <td align="right">&nbsp; </td>
   </tr>
   <tr valign="top">
     <td align="left">Whale</td>
     <td align="left">1K-10K BTC</td>
+    <td align="right">4864946</td>
     <td align="right">4851390</td>
-    <td align="right">4841167</td>
-    <td align="right">10223</td>
-    <td align="right" class="danger" >-2541</td>
-    <td align="right" class="danger" >-60029</td>
-    <td align="right">166951</td>
-    <td align="right">318293</td>
-    <td align="right">7.022</td>
+    <td align="right">13556</td>
+    <td align="right">19495</td>
+    <td align="right" class="danger" >-50490</td>
+    <td align="right">180517</td>
+    <td align="right">&nbsp; </td>
+    <td align="right">&nbsp; </td>
   </tr>
   <tr valign="top">
     <td align="left">Shark</td>
     <td align="left">100-1K BTC</td>
+    <td align="right">3910902</td>
     <td align="right">3906527</td>
-    <td align="right">3910363</td>
-    <td align="right" class="danger" >-3836</td>
-    <td align="right" class="danger" >-5074</td>
-    <td align="right">148830</td>
-    <td align="right" class="danger" >-14079</td>
-    <td align="right" class="danger" >-20066</td>
-    <td align="right" class="danger" >-0.511</td>
+    <td align="right">4375</td>
+    <td align="right">1259</td>
+    <td align="right">157229</td>
+    <td align="right">3175</td>
+    <td align="right">&nbsp; </td>
+    <td align="right">&nbsp; </td>
   </tr>
   <tr valign="top">
     <td align="left">Fish</td>
     <td align="left">10-100 BTC</td>
+    <td align="right">4360378</td>
     <td align="right">4361088</td>
-    <td align="right">4357811</td>
-    <td align="right">3277</td>
-    <td align="right" class="danger" >-2658</td>
-    <td align="right" class="danger" >-30747</td>
-    <td align="right" class="danger" >-69560</td>
-    <td align="right" class="danger" >-73231</td>
-    <td align="right" class="danger" >-1.651</td>
+    <td align="right" class="danger" >-710</td>
+    <td align="right" class="danger" >-2701</td>
+    <td align="right" class="danger" >-32001</td>
+    <td align="right" class="danger" >-71904</td>
+    <td align="right">&nbsp; </td>
+    <td align="right">&nbsp; </td>
   </tr>
   <tr valign="top">
     <td align="left">Crab</td>
     <td align="left">1-10 BTC</td>
+    <td align="right">2125295</td>
     <td align="right">2124336</td>
-    <td align="right">2123374</td>
-    <td align="right">962</td>
-    <td align="right" class="danger" >-631</td>
-    <td align="right" class="danger" >-20740</td>
-    <td align="right" class="danger" >-32593</td>
-    <td align="right">43130</td>
-    <td align="right">2.072</td>
+    <td align="right">959</td>
+    <td align="right">803</td>
+    <td align="right" class="danger" >-19986</td>
+    <td align="right" class="danger" >-30317</td>
+    <td align="right">&nbsp; </td>
+    <td align="right">&nbsp; </td>
   </tr>
   <tr valign="top">
     <td align="left">Shrimp</td>
     <td align="left">&lt;1 BTC</td>
+    <td align="right">1406256</td>
     <td align="right">1406362</td>
-    <td align="right">1406290</td>
-    <td align="right">72</td>
-    <td align="right">240</td>
-    <td align="right" class="danger" >-6198</td>
-    <td align="right" class="danger" >-17509</td>
-    <td align="right">89276</td>
-    <td align="right">6.778</td>
+    <td align="right" class="danger" >-106</td>
+    <td align="right">676</td>
+    <td align="right" class="danger" >-6556</td>
+    <td align="right" class="danger" >-17326</td>
+    <td align="right">&nbsp; </td>
+    <td align="right">&nbsp; </td>
   </tr>
   <tr valign="top">
     <td align="left">Total</td>
     <td align="left">&nbsp; </td>
-    <td align="right">19658818</td>
-    <td align="right">19657188</td>
-    <td align="right">838</td>
-    <td align="right">6218</td>
-    <td align="right">26817</td>
-    <td align="right">209708</td>
-    <td align="right">334204</td>
-    <td align="right">12.945</td>
+    <td align="right">19659807</td>
+    <td align="right">19657980</td>
+    <td align="right">989</td>
+    <td align="right">6283</td>
+    <td align="right">27538</td>
+    <td align="right">122244</td>
+    <td align="right">&nbsp; </td>
+    <td align="right">&nbsp; </td>
   </tr>
 </table>
 
