--- a/reports/bitcoin_distribution_addr.html
+++ b/reports/bitcoin_distribution_addr.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><title>Bitcoin address distribution</title><meta charset='utf-8'><meta name='viewport' content='width=device-width, initial-scale=1'><link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css'></head><body><div class='container'><h2>Bitcoin address distribution</h2><p><b> Saturday  23 Mar 2024
+<!DOCTYPE html><html><head><title>Bitcoin address distribution</title><meta charset='utf-8'><meta name='viewport' content='width=device-width, initial-scale=1'><link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css'></head><body><div class='container'><h2>Bitcoin address distribution</h2><p><b> Sunday    24 Mar 2024
 
 </b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Daily update</p>
 <table class='table table-striped'>
@@ -15,85 +15,85 @@
     <td align="left">Humpback</td>
     <td align="left">&gt;10K BTC</td>
     <td align="right">110</td>
-    <td align="right">111</td>
-    <td align="right" class="danger" >-1</td>
+    <td align="right">110</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
     <td align="right">1</td>
-    <td align="right">1</td>
-    <td align="right">3</td>
-    <td align="right" class="danger" >-7</td>
-    <td align="right" class="danger" >-5.983</td>
+    <td align="right">2</td>
+    <td align="right">&nbsp; </td>
+    <td align="right">&nbsp; </td>
   </tr>
   <tr valign="top">
     <td align="left">Whale</td>
     <td align="left">1K-10K BTC</td>
+    <td align="right">1980</td>
     <td align="right">1976</td>
-    <td align="right">1965</td>
-    <td align="right">11</td>
-    <td align="right">7</td>
-    <td align="right" class="danger" >-53</td>
-    <td align="right">63</td>
-    <td align="right">72</td>
-    <td align="right">3.782</td>
+    <td align="right">4</td>
+    <td align="right">10</td>
+    <td align="right" class="danger" >-57</td>
+    <td align="right">65</td>
+    <td align="right">&nbsp; </td>
+    <td align="right">&nbsp; </td>
   </tr>
   <tr valign="top">
     <td align="left">Shark</td>
     <td align="left">100-1K BTC</td>
+    <td align="right">13862</td>
     <td align="right">13859</td>
-    <td align="right">13885</td>
-    <td align="right" class="danger" >-26</td>
-    <td align="right" class="danger" >-33</td>
-    <td align="right">212</td>
-    <td align="right" class="danger" >-91</td>
-    <td align="right" class="danger" >-228</td>
-    <td align="right" class="danger" >-1.619</td>
+    <td align="right">3</td>
+    <td align="right" class="danger" >-28</td>
+    <td align="right">225</td>
+    <td align="right" class="danger" >-53</td>
+    <td align="right">&nbsp; </td>
+    <td align="right">&nbsp; </td>
   </tr>
   <tr valign="top">
     <td align="left">Fish</td>
     <td align="left">10-100 BTC</td>
+    <td align="right">137104</td>
     <td align="right">137113</td>
-    <td align="right">137084</td>
-    <td align="right">29</td>
-    <td align="right" class="danger" >-131</td>
-    <td align="right" class="danger" >-1245</td>
-    <td align="right" class="danger" >-2360</td>
-    <td align="right" class="danger" >-2733</td>
-    <td align="right" class="danger" >-1.954</td>
+    <td align="right" class="danger" >-9</td>
+    <td align="right" class="danger" >-300</td>
+    <td align="right" class="danger" >-1255</td>
+    <td align="right" class="danger" >-2364</td>
+    <td align="right">&nbsp; </td>
+    <td align="right">&nbsp; </td>
   </tr>
   <tr valign="top">
     <td align="left">Crab</td>
     <td align="left">1-10 BTC</td>
+    <td align="right">856211</td>
     <td align="right">855984</td>
-    <td align="right">855745</td>
-    <td align="right">239</td>
-    <td align="right" class="danger" >-48</td>
-    <td align="right" class="danger" >-7758</td>
-    <td align="right" class="danger" >-12073</td>
-    <td align="right">22673</td>
-    <td align="right">2.721</td>
+    <td align="right">227</td>
+    <td align="right">508</td>
+    <td align="right" class="danger" >-7785</td>
+    <td align="right" class="danger" >-11392</td>
+    <td align="right">&nbsp; </td>
+    <td align="right">&nbsp; </td>
   </tr>
   <tr valign="top">
     <td align="left">Shrimp</td>
     <td align="left">&lt;1 BTC</td>
+    <td align="right">51501058</td>
     <td align="right">51542333</td>
-    <td align="right">51535596</td>
-    <td align="right">6737</td>
-    <td align="right">41782</td>
-    <td align="right">284528</td>
-    <td align="right">224166</td>
-    <td align="right">6846439</td>
-    <td align="right">15.318</td>
+    <td align="right" class="danger" >-41275</td>
+    <td align="right">36597</td>
+    <td align="right">220984</td>
+    <td align="right">135986</td>
+    <td align="right">&nbsp; </td>
+    <td align="right">&nbsp; </td>
   </tr>
   <tr valign="top">
     <td align="left">Total</td>
     <td align="left">&nbsp; </td>
-    <td align="right">52551375</td>
-    <td align="right">52502213</td>
-    <td align="right">6989</td>
-    <td align="right">41578</td>
-    <td align="right">275685</td>
+    <td align="right">52510325</td>
+    <td align="right">52544386</td>
+    <td align="right" class="danger" >-41050</td>
+    <td align="right">36787</td>
+    <td align="right">212113</td>
     <td align="right">&nbsp; </td>
-    <td align="right">334204</td>
-    <td align="right">12.265</td>
+    <td align="right">&nbsp; </td>
+    <td align="right">&nbsp; </td>
   </tr>
 </table>
 
