--- a/reports/bitcoin_distribution_addr_tables.html
+++ b/reports/bitcoin_distribution_addr_tables.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container mt-3">
       <h2>Bitcoin Address Distribution</h2>
-      <p>Saturday 23 March 2024.  Daily update</p>            
+      <p>Sunday 24 March 2024.  Daily update</p>            
       <table border="1" class="dataframe table table-striped align-left table-responsive text-start">
   <thead>
     <tr style="text-align: left;">
@@ -34,85 +34,85 @@
       <td>Humpback</td>
       <td>&gt;10K BTC</td>
       <td>110</td>
-      <td>111</td>
-      <td class="bg-warning">-1</td>
+      <td>110</td>
+      <td>0</td>
+      <td>0</td>
       <td>1</td>
-      <td>1</td>
-      <td>3.0</td>
-      <td class="bg-warning">-7</td>
-      <td class="bg-warning">-5.983</td>
+      <td>2.0</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Whale</td>
       <td>1K-10K BTC</td>
+      <td>1980</td>
       <td>1976</td>
-      <td>1965</td>
-      <td>11</td>
-      <td>7</td>
-      <td class="bg-warning">-53</td>
-      <td>63.0</td>
-      <td>72</td>
-      <td>3.782</td>
+      <td>4</td>
+      <td>10</td>
+      <td class="bg-warning">-57</td>
+      <td>65.0</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Shark</td>
       <td>100-1K BTC</td>
+      <td>13862</td>
       <td>13859</td>
-      <td>13885</td>
-      <td class="bg-warning">-26</td>
-      <td class="bg-warning">-33</td>
-      <td>212</td>
-      <td class="bg-warning">-91.0</td>
-      <td class="bg-warning">-228</td>
-      <td class="bg-warning">-1.619</td>
+      <td>3</td>
+      <td class="bg-warning">-28</td>
+      <td>225</td>
+      <td class="bg-warning">-53.0</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Fish</td>
       <td>10-100 BTC</td>
+      <td>137104</td>
       <td>137113</td>
-      <td>137084</td>
-      <td>29</td>
-      <td class="bg-warning">-131</td>
-      <td class="bg-warning">-1245</td>
-      <td class="bg-warning">-2360.0</td>
-      <td class="bg-warning">-2733</td>
-      <td class="bg-warning">-1.954</td>
+      <td class="bg-warning">-9</td>
+      <td class="bg-warning">-300</td>
+      <td class="bg-warning">-1255</td>
+      <td class="bg-warning">-2364.0</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Crab</td>
       <td>1-10 BTC</td>
+      <td>856211</td>
       <td>855984</td>
-      <td>855745</td>
-      <td>239</td>
-      <td class="bg-warning">-48</td>
-      <td class="bg-warning">-7758</td>
-      <td class="bg-warning">-12073.0</td>
-      <td>22673</td>
-      <td>2.721</td>
+      <td>227</td>
+      <td>508</td>
+      <td class="bg-warning">-7785</td>
+      <td class="bg-warning">-11392.0</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Shrimp</td>
       <td>&lt;1 BTC</td>
+      <td>51501058</td>
       <td>51542333</td>
-      <td>51535596</td>
-      <td>6737</td>
-      <td>41782</td>
-      <td>284528</td>
-      <td>224166.0</td>
-      <td>6846439</td>
-      <td>15.318</td>
+      <td class="bg-warning">-41275</td>
+      <td>36597</td>
+      <td>220984</td>
+      <td>135986.0</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Total</td>
       <td></td>
-      <td>52551375</td>
-      <td>52502213</td>
-      <td>6989</td>
-      <td>41578</td>
-      <td>275685</td>
+      <td>52510325</td>
+      <td>52544386</td>
+      <td class="bg-warning">-41050</td>
+      <td>36787</td>
+      <td>212113</td>
       <td>NaN</td>
-      <td>334204</td>
-      <td>12.265</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
   </tbody>
 </table>
