--- a/reports/bitcoin_distribution_coins_tables.html
+++ b/reports/bitcoin_distribution_coins_tables.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container mt-3">
       <h2>Bitcoin Coin Distribution</h2>
-      <p>Saturday 23 March 2024.  Daily update</p>            
+      <p>Sunday 24 March 2024.  Daily update</p>            
       <table border="1" class="dataframe table table-striped align-left table-responsive text-start">
   <thead>
     <tr style="text-align: left;">
@@ -33,86 +33,86 @@
     <tr>
       <td>Humpback</td>
       <td>&gt;10K BTC</td>
+      <td>2992030</td>
       <td>3009115</td>
-      <td>3018975</td>
-      <td class="bg-warning">-9860</td>
-      <td>16882</td>
-      <td class="bg-warning">-4299</td>
-      <td>48275</td>
-      <td class="bg-warning">-23198</td>
-      <td class="bg-warning">-0.765</td>
+      <td class="bg-warning">-17085</td>
+      <td class="bg-warning">-13249</td>
+      <td class="bg-warning">-20658</td>
+      <td>17499</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Whale</td>
       <td>1K-10K BTC</td>
+      <td>4864946</td>
       <td>4851390</td>
-      <td>4841167</td>
-      <td>10223</td>
-      <td class="bg-warning">-2541</td>
-      <td class="bg-warning">-60029</td>
-      <td>166951</td>
-      <td>318293</td>
-      <td>7.022</td>
+      <td>13556</td>
+      <td>19495</td>
+      <td class="bg-warning">-50490</td>
+      <td>180517</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Shark</td>
       <td>100-1K BTC</td>
+      <td>3910902</td>
       <td>3906527</td>
-      <td>3910363</td>
-      <td class="bg-warning">-3836</td>
-      <td class="bg-warning">-5074</td>
-      <td>148830</td>
-      <td class="bg-warning">-14079</td>
-      <td class="bg-warning">-20066</td>
-      <td class="bg-warning">-0.511</td>
+      <td>4375</td>
+      <td>1259</td>
+      <td>157229</td>
+      <td>3175</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Fish</td>
       <td>10-100 BTC</td>
+      <td>4360378</td>
       <td>4361088</td>
-      <td>4357811</td>
-      <td>3277</td>
-      <td class="bg-warning">-2658</td>
-      <td class="bg-warning">-30747</td>
-      <td class="bg-warning">-69560</td>
-      <td class="bg-warning">-73231</td>
-      <td class="bg-warning">-1.651</td>
+      <td class="bg-warning">-710</td>
+      <td class="bg-warning">-2701</td>
+      <td class="bg-warning">-32001</td>
+      <td class="bg-warning">-71904</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Crab</td>
       <td>1-10 BTC</td>
+      <td>2125295</td>
       <td>2124336</td>
-      <td>2123374</td>
-      <td>962</td>
-      <td class="bg-warning">-631</td>
-      <td class="bg-warning">-20740</td>
-      <td class="bg-warning">-32593</td>
-      <td>43130</td>
-      <td>2.072</td>
+      <td>959</td>
+      <td>803</td>
+      <td class="bg-warning">-19986</td>
+      <td class="bg-warning">-30317</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Shrimp</td>
       <td>&lt;1 BTC</td>
+      <td>1406256</td>
       <td>1406362</td>
-      <td>1406290</td>
-      <td>72</td>
-      <td>240</td>
-      <td class="bg-warning">-6198</td>
-      <td class="bg-warning">-17509</td>
-      <td>89276</td>
-      <td>6.778</td>
+      <td class="bg-warning">-106</td>
+      <td>676</td>
+      <td class="bg-warning">-6556</td>
+      <td class="bg-warning">-17326</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Total</td>
       <td></td>
-      <td>19658818</td>
-      <td>19657188</td>
-      <td>838</td>
-      <td>6218</td>
-      <td>26817</td>
-      <td>209708</td>
-      <td>334204</td>
-      <td>12.945</td>
+      <td>19659807</td>
+      <td>19657980</td>
+      <td>989</td>
+      <td>6283</td>
+      <td>27538</td>
+      <td>122244</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
   </tbody>
 </table>
