--- a/reports/bitcoin_distribution_tables.html
+++ b/reports/bitcoin_distribution_tables.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container mt-3">
       <h2>Bitcoin Coin Distribution</h2>
-      <p>Saturday 23 March 2024.  Daily update</p>            
+      <p>Sunday 24 March 2024.  Daily update</p>            
       <table border="1" class="dataframe table table-striped align-left table-responsive text-start">
   <thead>
     <tr style="text-align: left;">
@@ -33,93 +33,93 @@
     <tr>
       <td>Humpback</td>
       <td>&gt;10K BTC</td>
+      <td>2992030</td>
       <td>3009115</td>
-      <td>3018975</td>
-      <td class="bg-warning">-9860</td>
-      <td>16882</td>
-      <td class="bg-warning">-4299</td>
-      <td>48275</td>
-      <td class="bg-warning">-23198</td>
-      <td class="bg-warning">-0.765</td>
+      <td class="bg-warning">-17085</td>
+      <td class="bg-warning">-13249</td>
+      <td class="bg-warning">-20658</td>
+      <td>17499</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Whale</td>
       <td>1K-10K BTC</td>
+      <td>4864946</td>
       <td>4851390</td>
-      <td>4841167</td>
-      <td>10223</td>
-      <td class="bg-warning">-2541</td>
-      <td class="bg-warning">-60029</td>
-      <td>166951</td>
-      <td>318293</td>
-      <td>7.022</td>
+      <td>13556</td>
+      <td>19495</td>
+      <td class="bg-warning">-50490</td>
+      <td>180517</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Shark</td>
       <td>100-1K BTC</td>
+      <td>3910902</td>
       <td>3906527</td>
-      <td>3910363</td>
-      <td class="bg-warning">-3836</td>
-      <td class="bg-warning">-5074</td>
-      <td>148830</td>
-      <td class="bg-warning">-14079</td>
-      <td class="bg-warning">-20066</td>
-      <td class="bg-warning">-0.511</td>
+      <td>4375</td>
+      <td>1259</td>
+      <td>157229</td>
+      <td>3175</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Fish</td>
       <td>10-100 BTC</td>
+      <td>4360378</td>
       <td>4361088</td>
-      <td>4357811</td>
-      <td>3277</td>
-      <td class="bg-warning">-2658</td>
-      <td class="bg-warning">-30747</td>
-      <td class="bg-warning">-69560</td>
-      <td class="bg-warning">-73231</td>
-      <td class="bg-warning">-1.651</td>
+      <td class="bg-warning">-710</td>
+      <td class="bg-warning">-2701</td>
+      <td class="bg-warning">-32001</td>
+      <td class="bg-warning">-71904</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Crab</td>
       <td>1-10 BTC</td>
+      <td>2125295</td>
       <td>2124336</td>
-      <td>2123374</td>
-      <td>962</td>
-      <td class="bg-warning">-631</td>
-      <td class="bg-warning">-20740</td>
-      <td class="bg-warning">-32593</td>
-      <td>43130</td>
-      <td>2.072</td>
+      <td>959</td>
+      <td>803</td>
+      <td class="bg-warning">-19986</td>
+      <td class="bg-warning">-30317</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Shrimp</td>
       <td>&lt;1 BTC</td>
+      <td>1406256</td>
       <td>1406362</td>
-      <td>1406290</td>
-      <td>72</td>
-      <td>240</td>
-      <td class="bg-warning">-6198</td>
-      <td class="bg-warning">-17509</td>
-      <td>89276</td>
-      <td>6.778</td>
+      <td class="bg-warning">-106</td>
+      <td>676</td>
+      <td class="bg-warning">-6556</td>
+      <td class="bg-warning">-17326</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Total</td>
       <td></td>
-      <td>19658818</td>
-      <td>19657188</td>
-      <td>838</td>
-      <td>6218</td>
-      <td>26817</td>
-      <td>209708</td>
-      <td>334204</td>
-      <td>12.945</td>
+      <td>19659807</td>
+      <td>19657980</td>
+      <td>989</td>
+      <td>6283</td>
+      <td>27538</td>
+      <td>122244</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
   </tbody>
 </table>
     </div>
     <div class="container mt-3">
       <h2>Bitcoin Address Distribution</h2>
-      <p>Saturday 23 March 2024.  Daily update</p>            
+      <p>Sunday 24 March 2024.  Daily update</p>            
       <table border="1" class="dataframe table table-striped align-left table-responsive text-start">
   <thead>
     <tr style="text-align: left;">
@@ -140,85 +140,85 @@
       <td>Humpback</td>
       <td>&gt;10K BTC</td>
       <td>110</td>
-      <td>111</td>
-      <td class="bg-warning">-1</td>
+      <td>110</td>
+      <td>0</td>
+      <td>0</td>
       <td>1</td>
-      <td>1</td>
-      <td>3.0</td>
-      <td class="bg-warning">-7</td>
-      <td class="bg-warning">-5.983</td>
+      <td>2.0</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Whale</td>
       <td>1K-10K BTC</td>
+      <td>1980</td>
       <td>1976</td>
-      <td>1965</td>
-      <td>11</td>
-      <td>7</td>
-      <td class="bg-warning">-53</td>
-      <td>63.0</td>
-      <td>72</td>
-      <td>3.782</td>
+      <td>4</td>
+      <td>10</td>
+      <td class="bg-warning">-57</td>
+      <td>65.0</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Shark</td>
       <td>100-1K BTC</td>
+      <td>13862</td>
       <td>13859</td>
-      <td>13885</td>
-      <td class="bg-warning">-26</td>
-      <td class="bg-warning">-33</td>
-      <td>212</td>
-      <td class="bg-warning">-91.0</td>
-      <td class="bg-warning">-228</td>
-      <td class="bg-warning">-1.619</td>
+      <td>3</td>
+      <td class="bg-warning">-28</td>
+      <td>225</td>
+      <td class="bg-warning">-53.0</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Fish</td>
       <td>10-100 BTC</td>
+      <td>137104</td>
       <td>137113</td>
-      <td>137084</td>
-      <td>29</td>
-      <td class="bg-warning">-131</td>
-      <td class="bg-warning">-1245</td>
-      <td class="bg-warning">-2360.0</td>
-      <td class="bg-warning">-2733</td>
-      <td class="bg-warning">-1.954</td>
+      <td class="bg-warning">-9</td>
+      <td class="bg-warning">-300</td>
+      <td class="bg-warning">-1255</td>
+      <td class="bg-warning">-2364.0</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Crab</td>
       <td>1-10 BTC</td>
+      <td>856211</td>
       <td>855984</td>
-      <td>855745</td>
-      <td>239</td>
-      <td class="bg-warning">-48</td>
-      <td class="bg-warning">-7758</td>
-      <td class="bg-warning">-12073.0</td>
-      <td>22673</td>
-      <td>2.721</td>
+      <td>227</td>
+      <td>508</td>
+      <td class="bg-warning">-7785</td>
+      <td class="bg-warning">-11392.0</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Shrimp</td>
       <td>&lt;1 BTC</td>
+      <td>51501058</td>
       <td>51542333</td>
-      <td>51535596</td>
-      <td>6737</td>
-      <td>41782</td>
-      <td>284528</td>
-      <td>224166.0</td>
-      <td>6846439</td>
-      <td>15.318</td>
+      <td class="bg-warning">-41275</td>
+      <td>36597</td>
+      <td>220984</td>
+      <td>135986.0</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Total</td>
       <td></td>
-      <td>52551375</td>
-      <td>52502213</td>
-      <td>6989</td>
-      <td>41578</td>
-      <td>275685</td>
+      <td>52510325</td>
+      <td>52544386</td>
+      <td class="bg-warning">-41050</td>
+      <td>36787</td>
+      <td>212113</td>
       <td>NaN</td>
-      <td>334204</td>
-      <td>12.265</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
   </tbody>
 </table>
