--- a/cdd_dark.html
+++ b/cdd_dark.html
@@ -557,7 +557,7 @@
         <span class="katex-mathml">
             <math xmlns="http://www.w3.org/1998/Math/MathML">
                 <semantics>
-                    <mrow><mtext>CDD 90 dMA</mtext><mo>=</mo>
+                    <mrow><mtext>CDD Ajusted</mtext><mo>=</mo>
                         <mo>CurrentSupply</mo>
                         <mo>x</mo>
                         <mtext>Sum (CoinAge x CoinValue)</mtext>
