--- a/graphics/nupl.html
+++ b/graphics/nupl.html
@@ -123,6 +123,7 @@
 
             series: [{
                 name: 'BTC price',
+                color: 'black',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
