--- a/graphics/lth_sopr.html
+++ b/graphics/lth_sopr.html
@@ -120,6 +120,7 @@
 
             series: [{
                 name: 'BTC price',
+                color: 'black',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
