--- a/graphics/nupl_dark.html
+++ b/graphics/nupl_dark.html
@@ -133,7 +133,7 @@
                 yAxis: 0
             }, {
                 name: 'BTC price',
-                color: 'black',
+                color: 'white',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
