--- a/graphics/realized_price_g_dark.html
+++ b/graphics/realized_price_g_dark.html
@@ -120,6 +120,7 @@
 
             series: [{
                 name: 'BTC price',
+                color: 'white',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
