--- a/graphics/address_active_dark.html
+++ b/graphics/address_active_dark.html
@@ -120,6 +120,7 @@
                 yAxis: 0
             }, {
                 name: 'BTC price',
+                color: 'white',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
