--- a/graphics/aviv.html
+++ b/graphics/aviv.html
@@ -125,6 +125,7 @@
 
             series: [{
                 name: 'BTC price',
+                color: 'black',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
