--- a/graphics/cdd.html
+++ b/graphics/cdd.html
@@ -122,6 +122,7 @@
 
             series: [{
                 name: 'BTC price',
+                color: 'black',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
