--- a/graphics/cdd_dark.html
+++ b/graphics/cdd_dark.html
@@ -124,6 +124,7 @@
 
             series: [{
                 name: 'BTC price',
+                color: 'white',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
