--- a/graphics/fear_greed.html
+++ b/graphics/fear_greed.html
@@ -115,6 +115,7 @@
 
             series: [{
                 name: 'BTC price',
+                color: 'black',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
