--- a/graphics/fear_greed_dark.html
+++ b/graphics/fear_greed_dark.html
@@ -117,6 +117,7 @@
 
             series: [{
                 name: 'BTC price',
+                color: 'white',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
