--- a/graphics/lth_sopr_dark.html
+++ b/graphics/lth_sopr_dark.html
@@ -122,6 +122,7 @@
 
             series: [{
                 name: 'BTC price',
+                color: 'white',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
