--- a/graphics/m2.html
+++ b/graphics/m2.html
@@ -119,6 +119,7 @@
 
             series: [{
                 name: 'BTC price',
+                color: 'black',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
