--- a/graphics/m2_dark.html
+++ b/graphics/m2_dark.html
@@ -121,6 +121,7 @@
 
             series: [{
                 name: 'BTC price',
+                color: 'white',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
