--- a/graphics/mvrv.html
+++ b/graphics/mvrv.html
@@ -130,6 +130,7 @@
 
             series: [{
                 name: 'BTC price',
+                color: 'black',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
