--- a/graphics/mvrv_dark.html
+++ b/graphics/mvrv_dark.html
@@ -132,6 +132,7 @@
 
             series: [{
                 name: 'BTC price',
+                color: 'white',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
