--- a/graphics/pi_cycle.html
+++ b/graphics/pi_cycle.html
@@ -142,6 +142,7 @@
 
             series: [{
                 name: 'BTC price',
+                color: 'black',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
