--- a/graphics/pi_cycle_dark.html
+++ b/graphics/pi_cycle_dark.html
@@ -144,6 +144,7 @@
 
             series: [{
                 name: 'BTC price',
+                color: 'white',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
