--- a/graphics/realized_price_g.html
+++ b/graphics/realized_price_g.html
@@ -118,6 +118,7 @@
 
             series: [{
                 name: 'BTC price',
+                color: 'black',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
