--- a/graphics/sopr.html
+++ b/graphics/sopr.html
@@ -126,6 +126,7 @@
 
             series: [{
                 name: 'BTC price',
+                color: 'black',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
