--- a/graphics/sth_mvrv.html
+++ b/graphics/sth_mvrv.html
@@ -112,6 +112,7 @@
 
             series: [{
                 name: 'BTC price',
+                color: 'black',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
