--- a/graphics/sth_realized_price.html
+++ b/graphics/sth_realized_price.html
@@ -123,6 +123,7 @@
                 yAxis: 0
             }, {
                 name: 'BTC price',
+                color: 'black',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
