--- a/graphics/sth_realized_price_dark.html
+++ b/graphics/sth_realized_price_dark.html
@@ -125,6 +125,7 @@
                 yAxis: 0
             }, {
                 name: 'BTC price',
+                color: 'white',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
