--- a/graphics/sth_sopr_dark.html
+++ b/graphics/sth_sopr_dark.html
@@ -21,6 +21,8 @@
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
 
+    <script src="https://charts.bgeometrics.com/assets/js/themes/brand-dark.js"></script>
+
     <div id="container-iframe" style="width:100%; height:600px;"></div>
 
     <script>
@@ -120,6 +122,7 @@
 
             series: [{
                 name: 'BTC price',
+                color: 'white',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
