--- a/graphics/sp500_gold.html
+++ b/graphics/sp500_gold.html
@@ -141,6 +141,7 @@
 
             series: [{
                 name: 'BTC price',
+                color: 'black',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
