--- a/graphics/stablecoin_supply.html
+++ b/graphics/stablecoin_supply.html
@@ -144,6 +144,7 @@
 
             series: [{
                 name: 'BTC price',
+                color: 'black',
                 data: data_price,
                 type: 'line',
                 tooltip: {
