--- a/graphics/stablecoin_supply_dark.html
+++ b/graphics/stablecoin_supply_dark.html
@@ -146,6 +146,7 @@
 
             series: [{
                 name: 'BTC price',
+                color: 'white',
                 data: data_price,
                 type: 'line',
                 tooltip: {
