--- a/graphics/ohlc.html
+++ b/graphics/ohlc.html
@@ -128,6 +128,7 @@
             }],
 
             series: [{
+                id: 'BTC',
                 type: 'hollowcandlestick',
                 name: 'Bitcoin OHLC',
                 data: data,
