--- a/graphics/ohlc_dark.html
+++ b/graphics/ohlc_dark.html
@@ -130,6 +130,7 @@
             }],
 
             series: [{
+                id: 'BTC',
                 type: 'hollowcandlestick',
                 name: 'Bitcoin OHLC',
                 data: data,
