--- a/tools/web-generation-end-m2.html
+++ b/tools/web-generation-end-m2.html
@@ -2,7 +2,7 @@
     <section>
       <div class="container">
         <a href="graphics/m2.html">
-          <h5>M2 Money Stock FRED</h5>
+          <h5>M2 Money Stock by FRED</h5>
         </a>
         <p> 
 	  The M2 Money Stock is a measure of the amount of money available in an economy, which includes various types of liquid assets.
