--- a/ohlc_7d_dark.html
+++ b/ohlc_7d_dark.html
@@ -532,7 +532,7 @@
     <section>
       <div class="container">
         <a href="graphics/ohlc.html">
-          <h5>Bitcoin OHLC (Open, High, Low, Close)</h5>
+          <h5>Bitcoin OHLC (Open, High, Low, Close) Week</h5>
         </a>
         <p> 
           The concept of prices in OHLC (Open, High, Low, and Close) is used for the technical analysis of bitcoin. These four elements represent different aspects of price behavior over a specific period, usually in the context of candlestick charts. Each of these terms is explained below in the context of Bitcoin.
