--- a/tools/web-generation-end-ohlc-7d.html
+++ b/tools/web-generation-end-ohlc-7d.html
@@ -42,6 +42,12 @@
           Price analysis on OHLC can be a good help in understanding the dynamics of the Bitcoin market. Investors and technical analysts use this data to try to identify patterns, trends, and potential reversal points.
         </p>
       </div>
+      <p>
+      The RSI (Relative Strength Index) is the Relative Strength Index, a technical indicator used in the technical analysis of financial markets, especially in the analysis of stocks, futures and currencies. It is commonly used to identify whether an asset is overbought or oversold.
+      </p>
+      <p>
+      The RSI is calculated by comparing the magnitude of recent gains to recent losses over a specific time period, usually 14 days. A mathematical formula is used to calculate a value that ranges between 0 and 100. A value above 70 is generally considered an overbought asset, suggesting that it could be primed for a downward correction. On the other hand, a value below 30 is generally considered an oversold asset, indicating that it could be primed for a bullish recovery.
+      </p>
 
     </section>
 
