--- a/address_active_dark.html
+++ b/address_active_dark.html
@@ -533,6 +533,23 @@
 
       </div>
     </section>
+    <br>
+    <section>
+      <div class="container">
+        <a href="graphics/nupl.html">
+          <h5>Bitcoin Active Addresses</h5>
+        </a>
+        <p> 
+	  The number of unique Bitcoin addresses that sent or received transactions. Only how you activate addresses that made successful transactions are taken into account.
+        <br><br>
+	  This is a metric that shows the activity in the Bitcoin network.
+        <br><br>
+	  Currently there are daily movements that occur in exchanges and in layers 2 such as the Lightning Network that are not reflected in this graph.
+        </p>
+
+      </div>
+
+    </section>
 
   </main><!-- End #main -->
 
