--- a/ohlc_1m.html
+++ b/ohlc_1m.html
@@ -542,42 +542,12 @@
     <section>
       <div class="container">
         <a href="graphics/ohlc.html">
-          <h5>Bitcoin OHLC (Open, High, Low, Close)</h5>
+          <h5>Bitcoin OHLC (Open, High, Low, Close) Minute</h5>
         </a>
         <p> 
-          The concept of prices in OHLC (Open, High, Low, and Close) is used for the technical analysis of bitcoin. These four elements represent different aspects of price behavior over a specific period, usually in the context of candlestick charts. Each of these terms is explained below in the context of Bitcoin.
+	  OHLC chart (Open, High, Low and Close) of bitcoin with periodicity and minute update.
         </p>
 
-        <div class="row">
-          <div class="col-lg-6">
-            <ul>
-              <li>
-                  <strong>Open:</strong>
-                  <p>
-                    The opening price is the value at which an asset, in this case Bitcoin, is trading at the beginning of a given time period. On a candlestick chart, it is often represented as the price at the far left of the candle.
-                    </p>
-                </li>
-                <li>
-                    <strong>High:</strong>
-                    <p>
-                      The highest price reached during the time period in question. In the context of Bitcoin, this could represent the highest value the cryptocurrency reached on a specific exchange during that period.
-                    </p>
-                </li>
-                <li> 
-                    <strong>Low:</strong>
-                    <p>
-                      The lowest price reached during the same period. This value shows the lowest point that Bitcoin has reached in that time interval.
-                    </p>
-                </li>
-                <li> 
-                    <strong>Close:</strong>
-                    <p>
-                      The price at which the asset is trading at the end of the period. On a candlestick chart, this value is displayed at the far right of the candle. The closing price is crucial as it can indicate the direction the market has taken during that time frame.
-                    </p>
-                </li>
-            </ul>
-          </div>
-        </div>
         <p>
           Price analysis on OHLC can be a good help in understanding the dynamics of the Bitcoin market. Investors and technical analysts use this data to try to identify patterns, trends, and potential reversal points.
         </p>
