--- a/fedfunds_dark.html
+++ b/fedfunds_dark.html
@@ -538,6 +538,33 @@
 
       </div>
     </section>
+  <br>
+
+  
+    <section>
+      <div class="container">
+        <a href="graphics/fedfunds.html">
+          <h5>Bitcoin Fed Funds</h5>
+        </a>
+        <p> 
+	  The federal funds rate is the interest rate at which depository institutions exchange federal funds (balances held at Federal Reserve Banks) with each other overnight.
+	  <br><br>
+	  When a depository institution has excess balances in its reserve account, it lends to other banks that need larger balances. In simpler terms, a bank with excess cash, often called liquidity, will lend to another bank that needs to quickly increase its liquidity.
+	  <br><br>
+	  The rate that the borrowing institution pays to the lending institution is determined between the two banks; The weighted average rate for all of these types of deals is called the effective federal funds rate.
+The effective federal funds rate is essentially determined by the market, but is influenced by the Federal Reserve through open market operations to achieve the federal funds rate. aim.
+	  <br><br>
+	  The Federal Open Market Committee (FOMC) meets eight times a year to determine the target federal funds rate. As noted above, this rate influences the effective federal funds rate through open market operations or through the purchase and sale of government bonds (government debt). More specifically, the Federal Reserve decreases liquidity by selling government bonds, thereby increasing federal funds. because banks have less liquidity to trade with other banks.
+	  <br><br>
+	  Similarly, the Federal Reserve can increase liquidity by purchasing government bonds, lowering the federal funds rate because banks have excess liquidity to trade. Whether the Federal Reserve wants to buy or sell bonds depends on the state of the economy. If the FOMC believes the economy is growing too quickly and inflationary pressures are inconsistent with the Fed's dual mandate, the Committee can set a higher federal funds rate target to moderate economic activity. In the opposite scenario, the FOMC could set a lower federal funds rate target to stimulate greater economic activity. Therefore, the FOMC must look at the current state of the economy to determine the best course of monetary policy that maximizes economic growth while fulfilling the dual mandate established by Congress. In making its monetary policy decisions, the FOMC considers a wealth of economic data, such as: price and wage trends, employment, consumer spending and income, business investments, and currency markets.
+	  <br><br>
+The federal funds rate is the central interest rate in the US financial market. It influences other interest rates, such as the prime rate, which is the rate banks charge their customers with higher credit ratings. Additionally, the federal funds rate indirectly influences long-term interest rates such as mortgages, loans, and savings, all of which are very important to consumer wealth and confidence.
+	  <br><br>
+	  <a href='https://fred.stlouisfed.org/series/FEDFUNDS'>Fed Funds</a>
+	</p>
+
+      </div>
+    </section>
 
   </main><!-- End #main -->
 
@@ -564,13 +591,10 @@
   </div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/chart.js/chart.umd.js"></script>
-  <script src="assets/vendor/echarts/echarts.min.js"></script>
-  <script src="assets/vendor/quill/quill.min.js"></script>
-  <script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
-  <script src="assets/vendor/tinymce/tinymce.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/bgeometrics.js"></script>
