--- a/ohlc_1m_dark.html
+++ b/ohlc_1m_dark.html
@@ -541,7 +541,7 @@
     <br>
     <section>
       <div class="container">
-        <a href="graphics/ohlc.html">
+        <a href="graphics/ohlc_1m.html">
           <h5>Bitcoin OHLC (Open, High, Low, Close) Minute</h5>
         </a>
         <p> 
