--- a/tools/web-generation-end-ohlc-1m.html
+++ b/tools/web-generation-end-ohlc-1m.html
@@ -1,7 +1,7 @@
     <br>
     <section>
       <div class="container">
-        <a href="graphics/ohlc.html">
+        <a href="graphics/ohlc_1m.html">
           <h5>Bitcoin OHLC (Open, High, Low, Close) Minute</h5>
         </a>
         <p> 
