--- a/fedfunds_dark.html
+++ b/fedfunds_dark.html
@@ -547,7 +547,7 @@
           <h5>Bitcoin Fed Funds</h5>
         </a>
         <p> 
-	  The federal funds rate is the interest rate at which depository institutions exchange federal funds (balances held at Federal Reserve Banks) with each other overnight.
+	  The federal funds (Fed Funds) rate is the interest rate at which depository institutions exchange federal funds (balances held at Federal Reserve Banks) with each other overnight.
 	  <br><br>
 	  When a depository institution has excess balances in its reserve account, it lends to other banks that need larger balances. In simpler terms, a bank with excess cash, often called liquidity, will lend to another bank that needs to quickly increase its liquidity.
 	  <br><br>
