--- a/fedfunds_dark.html
+++ b/fedfunds_dark.html
@@ -560,7 +560,7 @@ The effective federal funds rate is essentially determined by the market, but is
 	  <br><br>
 The federal funds rate is the central interest rate in the US financial market. It influences other interest rates, such as the prime rate, which is the rate banks charge their customers with higher credit ratings. Additionally, the federal funds rate indirectly influences long-term interest rates such as mortgages, loans, and savings, all of which are very important to consumer wealth and confidence.
 	  <br><br>
-	  <a href='https://fred.stlouisfed.org/series/FEDFUNDS'>Fed Funds</a>
+	  <a href='https://fred.stlouisfed.org/series/FEDFUNDS'>Take from FRED</a>
 	</p>
 
       </div>
