--- a/tools/web-generation-end-fedfunds.html
+++ b/tools/web-generation-end-fedfunds.html
@@ -4,7 +4,7 @@
     <section>
       <div class="container">
         <a href="graphics/fedfunds.html">
-          <h5>Bitcoin Fed Funds</h5>
+          <h5>Bitcoin and Fed Funds</h5>
         </a>
         <p> 
 	  The federal funds (Fed Funds) rate is the interest rate at which depository institutions exchange federal funds (balances held at Federal Reserve Banks) with each other overnight.
