--- a/etf.html
+++ b/etf.html
@@ -557,7 +557,7 @@
           <h5>Bitcoin ETF</h5>
         </a>
         <p> 
-	Los flujos diarios de Bitcoin Spot ETF, BlackRock (IBIT), The Grayscale Bitcoin Trust (GBTC), Fidelity (FBTC), Ark Invest /21Shares (ARKB), Bitwise (BitB), Franklin (EZBC), InvestCo /Galaxy (BTCO ), Vaneck (Hodl), Valkyrie (BRR) y WisdomTree (BTCW).
+	The daily flows and aggregates of Bitcoin of the ETF, Blackrock (IBIT), The Grayscale Bitcoin Trust (GBTC), Fidelity (FBTC), Ark Invest /21Shares (ARKB), Bitwise (BITB), Franklin (EZBC), Investco / Galaxy (BTCO), Vaneck (HODL), Valkyrie (BRR) and Wisdomtree (BTCW).
 	</p>
 
       </div>
