--- a/graphics/etf.html
+++ b/graphics/etf.html
@@ -148,7 +148,21 @@
                 tooltip: {
                     valueDecimals: 2
                 },
-                yAxis: 2
+                yAxis: 2,
+                groupPadding: 0,
+                /*
+                dataLabels: {
+                    enabled: true,
+                    rotation: 90,
+                    color: '#FFFFFF',
+                    verticalAlign: 'top',
+                    format: '{point.y:.0f}', 
+                    style: {
+                        fontSize: '9px',
+                        fontFamily: 'sans-serif, Verdana'
+                    }
+                }
+                */
             }],
 
             legend:{
