--- a/graphics/etf.html
+++ b/graphics/etf.html
@@ -144,6 +144,8 @@
                 id:'btc_etf',
                 type: 'column',
                 name: 'ETF flow BTC',
+                color: 'green',
+		        negativeColor: 'red',
                 data: data_etf,
                 tooltip: {
                     valueDecimals: 2
