--- a/graphics/etf_dark.html
+++ b/graphics/etf_dark.html
@@ -146,11 +146,14 @@
                 id:'btc_etf',
                 type: 'column',
                 name: 'ETF flow BTC',
+                color: 'green',
+		        negativeColor: 'red',
                 data: data_etf,
                 tooltip: {
                     valueDecimals: 2
                 },
-                yAxis: 2
+                yAxis: 2,
+                groupPadding: 0,
             }],
 
             legend:{
