--- a/etf.html
+++ b/etf.html
@@ -557,7 +557,11 @@
           <h5>Bitcoin ETF</h5>
         </a>
         <p> 
-	The daily flows and aggregates of Bitcoin of the ETF, Blackrock (IBIT), The Grayscale Bitcoin Trust (GBTC), Fidelity (FBTC), Ark Invest /21Shares (ARKB), Bitwise (BITB), Franklin (EZBC), Investco / Galaxy (BTCO), Vaneck (HODL), Valkyrie (BRR) and Wisdomtree (BTCW).
+	  The daily flows and aggregates of Bitcoin of the ETF, Blackrock (IBIT), The Grayscale Bitcoin Trust (GBTC), Fidelity (FBTC), Ark Invest /21Shares (ARKB), Bitwise (BITB), Franklin (EZBC), Investco / Galaxy (BTCO), Vaneck (HODL), Valkyrie (BRR) and Wisdomtree (BTCW).
+	  <br><br>
+	  The blue line represents the total BTC accumulated by companies that have ETFs.
+	  <br><br>
+          The lower bars represent the daily flow of bitcoin purchases and sales of these companies.
 	</p>
 
       </div>
