--- a/graphics/sp500_gold.html
+++ b/graphics/sp500_gold.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bitcoin, S&P 500, Gold, Tesla</title>
+    <title>Bitcoin, S&P 500, Gold, Tesla, MicroStrategy</title>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZR3ZFTF2FK"></script> 
     <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-ZR3ZFTF2FK'); </script>
@@ -36,6 +36,9 @@
             ).then(response => response.json());
             const data_tesla = await fetch(
                 'https://charts.bgeometrics.com/files/tsla_yf.json'
+            ).then(response => response.json());
+            const data_microstrategy = await fetch(
+                'https://charts.bgeometrics.com/files/mstr_yf.json'
             ).then(response => response.json());
  
         var chart = Highcharts.stockChart('container-iframe', {
@@ -76,6 +79,10 @@
                                 type: isLogarithmic ? 'linear' : 'logarithmic',
                                 minorTickInterval: isLogarithmic ? null : 'auto'
                             });
+                            chart.yAxis[4].update({
+                                type: isLogarithmic ? 'linear' : 'logarithmic',
+                                minorTickInterval: isLogarithmic ? null : 'auto'
+                            });
 
                             button.firstChild.style['background-image'] = `url(${iconURL})`;
 
@@ -89,7 +96,7 @@
                 }
             },
             title: {
-                text: '<a href="https://charts.bgeometrics.com">Bitcoin, S&P 500, Gold, Tesla</a>',
+                text: '<a href="https://charts.bgeometrics.com">Bitcoin, S&P 500, Gold, Tesla, MicroStrategy</a>',
                 align: 'left',
             },
 
@@ -118,7 +125,7 @@
 
             yAxis: [{
                 title: {
-                    text: 'Bitcoin, Tesla',
+                    text: 'Tesla',
                 },
                 type: 'logarithmic'
             }, {
@@ -135,6 +142,11 @@
             }, {
                 title: {
                     text: 'Gold'
+                },
+                type: 'logarithmic',
+            }, {
+                title: {
+                    text: 'MicroStrategy'
                 },
                 type: 'logarithmic',
             }],
@@ -171,6 +183,14 @@
                     valueDecimals: 2
                 },
                 yAxis: 0
+            }, {
+                id:'microstrategy',
+                name: 'MicroStrategy',
+                data: data_microstrategy,
+                tooltip: {
+                    valueDecimals: 2
+                },
+                yAxis: 4
             }],
 
             legend:{
