--- a/tools/web-generation-end-btc-sp500.html
+++ b/tools/web-generation-end-btc-sp500.html
@@ -21,7 +21,7 @@
               <li>
                 <strong>S&P 500</strong>
                 <p>
-		 The S&P 500, an index comprised of 500 of the largest U.S. companies weighted by market capitalization, is a critical benchmark for investors around the world. The performance of the S&P 500 reflects the overall health of the stock market and economic conditions in the United States.<p> 
+		 The S&P 500, an index comprised of 500 of the largest U.S. companies weighted by market capitalization, is a critical benchmark for investors around the world. The performance of the S&P 500 reflects the overall health of the stock market and economic conditions in the United States. 
 		 <br>
 		 The S&P 500 throughout its history averages approximately a 10% annual gain.
 		 <br>
