--- a/donation.html
+++ b/donation.html
@@ -546,7 +546,7 @@
           <div class="row">
             <div class="col-lg-12">
               <div class="info-box card">
-                <i class="bi bi-envelope"></i>
+                <i class="bi bi-lightning"></i>
                 <h3>Donation with Lightning Network</h3>
                 <p>lnurl1dp68gurn8ghj7ampd3kx2ar0veekzar0wd5xjtnrdakj7tnhv4kxctttdehhwm30d3h82unvwqhkyem9dakk2arjd93hx2sg3sm</p>
                 <p>
