--- a/tools/web-generation-model-donation-end.html
+++ b/tools/web-generation-model-donation-end.html
@@ -13,9 +13,12 @@
                 <h3>Donation with Lightning Network</h3>
                 <p>lnurl1dp68gurn8ghj7ampd3kx2ar0veekzar0wd5xjtnrdakj7tnhv4kxctttdehhwm30d3h82unvwqhkyem9dakk2arjd93hx2sg3sm</p>
                 <p>
-		  Wallets support: Wallet Of Satoshi, Blink, Strike, CoinCorner, Alby, Nicehash, Stacker News...&nbsp;
-		  <a href='https://lightningaddress.com/#providers'>Providers lnd address</a>
-		</p>
+		              Wallets support: Wallet Of Satoshi, Blink, Strike, CoinCorner, Alby, Nicehash, Stacker News...&nbsp;
+		              <a href='https://lightningaddress.com/#providers'>Providers lnd address</a>
+		            </p>
+                <p>
+                  <img src="assets/img/ln_qr.png" class="img-fluid" alt="Lightning Network QR">
+		            </p>
               </div>
             </div>
           </div>
