--- a/etf.html
+++ b/etf.html
@@ -562,10 +562,9 @@
     </section>
   <br>
 
-  
     <section>
       <div class="container">
-        <a href="graphics/fedfunds.html">
+        <a href="graphics/etf.html">
           <h5>Bitcoin ETF</h5>
         </a>
         <p> 
