--- a/tools/web-generation-end-etf.html
+++ b/tools/web-generation-end-etf.html
@@ -1,9 +1,8 @@
   <br>
 
-  
     <section>
       <div class="container">
-        <a href="graphics/fedfunds.html">
+        <a href="graphics/etf.html">
           <h5>Bitcoin ETF</h5>
         </a>
         <p> 
