--- a/power_law.html
+++ b/power_law.html
@@ -560,6 +560,65 @@
 
       </div>
     </section>
+  <br>
+  
+    <section>
+      <div class="container">
+        <a href="graphics/power_law.html">
+          <h5>Bitcoin Power Law</h5>
+        </a>
+        <p> 
+          It is a model that attempts to explain historical Bitcoin price trends using a mathematical concept called power law distribution.
+	  <br><br>
+	  This theory was initially proposed by <a href='https://twitter.com/Giovann35084111)'>@Giovann35084111</a> and what it suggests is that there is a correlation between the price of Bitcoin and the time since its inception.
+        </p>
+
+        <div class="row">
+          <div class="col-lg-6">
+            <ul>
+              <li>
+                <strong>Power law model:</strong>
+                <p>
+                  This model suggests that the price of Bitcoin follows this mathematical formula where the price increases as a power of time.
+                  <br>1.0117e-17 * (days since genesis block)^5.82
+		</p>
+	      </li>
+            </ul>
+	  </div>
+	</div>
+
+        <div class="row">
+          <div class="col-lg-6">
+            <ul>
+              <li>
+                <strong>Power law oscillator:</strong>
+		<p>
+		  The minimum or floor price is the one predicted by the model multiplied by 0.42. Historically speaking, the minimum price of bitcoin has been 58% below its fair price.
+	          <br>This price floor has only failed once: on March 13, 2020, where the price fell below the floor for just a few hours due to the black swan pandemic crash.
+                </p>
+	      </li>
+            </ul>
+	  </div>
+	</div>
+
+        <div class="row">
+          <div class="col-lg-6">
+            <ul>
+              <li>
+                <strong>Important points to consider:</strong>
+		<p>
+                  The power law is a theoretical model and, like any model, may not perfectly represent reality. The price of Bitcoin is influenced by several factors and future performance could deviate from the historical trend.
+                  <br>The power law model is better suited for understanding long-term trends than short-term price movements.
+		</p>
+	      </li>
+            </ul>
+	  </div>
+	</div>
+	<br></br>
+        Overall, the Bitcoin Power Law offers a way to analyze Bitcoin's price history and potentially its long-term trajectory. However, it is essential to remember that this is just a model and that you should consider other factors before making any investment decisions.
+
+      </div>
+    </section>
 
   </main><!-- End #main -->
 
@@ -586,13 +645,10 @@
   </div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/chart.js/chart.umd.js"></script>
-  <script src="assets/vendor/echarts/echarts.min.js"></script>
-  <script src="assets/vendor/quill/quill.min.js"></script>
-  <script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
-  <script src="assets/vendor/tinymce/tinymce.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/bgeometrics.js"></script>
