--- a/power_law.html
+++ b/power_law.html
@@ -577,7 +577,7 @@
           <div class="col-lg-6">
             <ul>
               <li>
-                <strong>Power law model:</strong>
+                <strong>BTC Power law model:</strong>
                 <p>
                   This model suggests that the price of Bitcoin follows this mathematical formula where the price increases as a power of time.
                   <br>1.0117e-17 * (days since genesis block)^5.82
@@ -591,7 +591,7 @@
           <div class="col-lg-6">
             <ul>
               <li>
-                <strong>Power law oscillator:</strong>
+                <strong>BTC Power law oscillator:</strong>
 		<p>
 		  The minimum or floor price is the one predicted by the model multiplied by 0.42. Historically speaking, the minimum price of bitcoin has been 58% below its fair price.
 	          <br>This price floor has only failed once: on March 13, 2020, where the price fell below the floor for just a few hours due to the black swan pandemic crash.
