--- a/tools/web-generation-model-bitcoin-api-end.html
+++ b/tools/web-generation-model-bitcoin-api-end.html
@@ -26,7 +26,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Metrics On-Chain</h5>
-	      With the free bitcoin API you can easily access the most relevant On Chain metrics extracted from the Bitcoin blockchain offering information on the current price of Bitcoin, market trends, transaction volumes and much more.
+	      With the free bitcoin API you can easily access the most relevant BTC On-Chain metrics extracted from the Bitcoin blockchain offering information on the current price of Bitcoin, market trends, transaction volumes and much more.
             </div>
           </div>
         </div>
